--- a/css/main.css
+++ b/css/main.css
@@ -129,4 +129,251 @@
   transform: rotateZ(40deg);
 }
 
+.header {
+  background: center no-repeat url("../images/bg.jpeg");
+  background-size: cover;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+.header::before {
+  content: "";
+  width: 100%;
+  height: 100vh;
+  background-color: #000;
+  opacity: 0.6;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.header .brand {
+  flex: 2;
+  position: relative;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  color: #bbb;
+}
+.header .brand .logo img {
+  width: 120px;
+  border: 2px solid #d3ab55;
+  border-radius: 50%;
+}
+.header .brand .main-name {
+  font-weight: 300;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-size: 40px;
+}
+.header .brand .sub-name {
+  font-weight: 300;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-size: 20px;
+}
+.header-banner {
+  flex: 4;
+  position: relative;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+  color: #bbb;
+}
+.header-banner .main-heading {
+  font-size: 80px;
+  color: #d3ab55;
+  font-family: "Dancing Script", cursive;
+}
+.header-banner .sub-heading {
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: lighter;
+  font-size: 50px;
+}
+.header-banner .main-btn {
+  background: transparent;
+  border: 2px solid #d3ab55;
+  color: #d3ab55;
+  font-weight: 300;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  padding: 15px 30px;
+}
+
+.about-us {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  background: #262626;
+  color: #bbb;
+  height: 80vh;
+}
+.about-us .about-us-left {
+  flex: 1;
+  position: relative;
+  right: 10%;
+}
+.about-us .about-us-left img {
+  width: 500px;
+}
+.about-us .about-us-right {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+  padding: 0 150px;
+}
+.about-us .about-us-right .main-heading {
+  color: #d3ab55;
+  font-family: "Dancing Script", cursive;
+  font-size: 80px;
+  font-weight: normal;
+}
+.about-us .about-us-right .sub-heading {
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: lighter;
+  font-size: 50px;
+}
+.about-us .about-us-right .stars {
+  color: #d3ab55;
+  margin: 10px 0;
+}
+.about-us .about-us-right .description {
+  font-family: "Josefin Sans", sans-serif;
+  font-style: italic;
+}
+.about-us .about-us-right .main-btn {
+  background: transparent;
+  border: 2px solid #d3ab55;
+  color: #d3ab55;
+  font-weight: 300;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  padding: 15px 30px;
+}
+
+.gallery {
+  position: relative;
+  height: 100%;
+}
+.gallery .cards-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: center;
+}
+.gallery .cards-wrapper .card {
+  position: relative;
+  overflow: hidden;
+  height: 450px;
+}
+.gallery .cards-wrapper .card:hover .card-overlay {
+  left: 0;
+}
+.gallery .cards-wrapper .card-overlay {
+  position: absolute;
+  top: 0;
+  left: -100%;
+  background-color: #d3ab5588;
+  height: 100%;
+  width: 100%;
+  z-index: 99;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  transition: all 0.5s ease;
+}
+.gallery .cards-wrapper .card-overlay-heading {
+  color: #fff;
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: lighter;
+  font-size: 50px;
+}
+.gallery .cards-wrapper .card-overlay-paragraph {
+  color: #fff;
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: lighter;
+  font-size: 30px;
+}
+.gallery .cards-wrapper .card-overlay-btn {
+  font-family: "Josefin Sans", sans-serif;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #d3ab55;
+  background: #fff;
+  border: none;
+  padding: 10px;
+  border-radius: 20px;
+  width: 150px;
+}
+.gallery .cards-wrapper .card-img {
+  width: 150%;
+  height: 450px;
+  transform: translateX(-18%);
+  cursor: pointer;
+}
+
+.footer {
+  position: relative;
+  background: #262626;
+  height: 50vh;
+  display: grid;
+  grid-template-rows: 2fr 1fr 1fr;
+  align-items: center;
+}
+.footer-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  color: #bbb;
+}
+.footer-header .logo img {
+  width: 120px;
+  border: 2px solid #d3ab55;
+  border-radius: 50%;
+}
+.footer-header .main-name {
+  font-weight: 300;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-size: 40px;
+}
+.footer-header .sub-name {
+  font-weight: 300;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: lighter;
+}
+.footer-social-media .social-media {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+.footer-social-media .social-media-item {
+  list-style: none;
+}
+.footer-social-media .social-media-link {
+  color: #bbb;
+  font-size: 50px;
+}
+.footer-copyright-paragraph {
+  color: #bbb;
+  text-align: center;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
 /*# sourceMappingURL=main.css.map */
