--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -52,6 +52,11 @@
 
     & .main-btn{
       @include buttonStyles;
+      cursor: pointer;
+
+      &:hover{
+        @include hoverButtons;
+      }
     }
   }
 }
