--- a/scss/_button.scss
+++ b/scss/_button.scss
@@ -6,6 +6,12 @@
   color: $color-primary;
   @include textStyles;
   padding: 15px 30px;
+  transition: all 0.5s ease;
+}
+
+@mixin hoverButtons{
+  background: $color-primary;
+  color: $color-dark;
 }
 
 @mixin orderButton {
